tests/variable/redeclare_global.rz
var a = "1"
var a // error: a variable with the same name as already been declared in this scope